--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     <div id="app"></div>
 
     <script src="./client/index.tsx" type="module"></script>
+    <script type="module">
+      import hello from './client/hello.js'
+      hello()
+    </script>
   </body>
 </html>
