fix: various fixes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Query 'Em All</title>
+    <title>Queries and Mutations</title>
     <link rel="stylesheet" href="./client/styles/main.css" />
+    <link rel="icon" href="https://freepngimg.com/download/pokemon/37693-6-pokeball-photos.png" />
   </head>
   <body>
     <div id="app"></div>
